--- a/angular-ms/iot-app/src/app/components/navbar/navbar.component.less
+++ b/angular-ms/iot-app/src/app/components/navbar/navbar.component.less
@@ -7,7 +7,9 @@ nav {
   top: 0;
   z-index: 1000;
   gap: 24px;
+  justify-content: space-between;
   color: var(--color-text);
+
   overflow: hidden;
 
   &::before {
@@ -34,13 +36,23 @@ nav {
 
 .nav-title {
   font-size: 28px;
-  flex: 1;
+  flex: 0 1 auto;
+  min-width: 0;
   font-weight: 700;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  @media screen and (max-width: 900px) {
+    font-size: 20px;
+  }
 
   @media screen and (max-width: 640px) {
     order: 1;
-    flex: none;
+    flex: 1;
+    text-align: center;
   }
+
 
   .logo-link {
     text-decoration: none;
